--- a/src/index.html
+++ b/src/index.html
@@ -61,9 +61,7 @@ title: Portfolio
 		</nav>
 
 		<div class="menu__social">
-			<a
-				href="
-         "
+			<a href="   "
 				><svg
 					xmlns="http://www.w3.org/2000/svg"
 					width="90"
@@ -84,8 +82,9 @@ title: Portfolio
 						fill="black" />
 					<path
 						d="M87.0698 0L72.9292 0C71.3139 0 69.9995 1.31439 69.9995 2.92969L69.9995 17.0703C69.9995 18.6856 71.3139 20 72.9292 20L78.8276 20V12.9297L76.4839 12.9297L76.4839 9.41406L78.8276 9.41406V7.03125C78.8276 5.09262 80.4046 3.51563 82.3433 3.51563L85.8979 3.51563L85.8979 7.03125L82.3433 7.03125V9.41406L85.8979 9.41406L85.312 12.9297L82.3433 12.9297V20L87.0698 20C88.6851 20 89.9995 18.6856 89.9995 17.0703L89.9995 2.92969C89.9995 1.31439 88.6851 0 87.0698 0Z"
-						fill="black" /></svg
-			></a>
+						fill="black" />
+				</svg>
+			</a>
 		</div>
 	</div>
 	<div class="menu__overlay"></div>
@@ -99,6 +98,67 @@ title: Portfolio
 		<div class="promo__btns">
 			<a href="#" class="promo__link btn">Портфолио</a>
 			<a href="#" class="promo__link">Про меня</a>
+		</div>
+	</div>
+</section>
+
+<section class="aboutme">
+	<div class="container">
+		<div class="aboutme__wrapper">
+			<div class="aboutme__photo">
+				<img src="assets/images/main_photo.jpg" alt="" />
+			</div>
+			<div class="aboutme__content">
+				<div class="content__subtitle title_fz16">Про меня</div>
+				<div class="content__title title_fz36">Меня зовут Александра</div>
+				<div class="content__line"></div>
+				<div class="content__descr">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+					ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+					ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+					reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+					sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+					est laborum
+				</div>
+				<div class="content__items">
+					<div class="item__card">
+						<div class="card__logo">
+							<img src="assets/images/icons/about_me/web_development.svg" alt="" />
+						</div>
+						<div class="card__wrapper">
+							<div class="card__title title_fz14">Web-разработка</div>
+							<div class="card__descr">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+								incididunt ut labore et dolore magna aliqua.
+							</div>
+						</div>
+					</div>
+					<div class="item__card">
+						<div class="card__logo">
+							<img src="assets/images/icons/about_me/mobile_dev.svg" alt="" />
+						</div>
+						<div class="card__wrapper">
+							<div class="card__title title_fz14">Web-разработка</div>
+							<div class="card__descr">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+								incididunt ut labore et dolore magna aliqua.
+							</div>
+						</div>
+					</div>
+					<div class="item__card">
+						<div class="card__logo">
+							<img src="assets/images/icons/about_me/design.svg" alt="" />
+						</div>
+						<div class="card__wrapper">
+							<div class="card__title title_fz14">Web-разработка</div>
+							<div class="card__descr">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+								incididunt ut labore et dolore magna aliqua.
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </section>
