--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,17 @@ title: Portfolio
 	<div class="container">
 		<div class="about__wrapper">
 			<div class="about__photo">
-				<img src="assets/images/main_photo.jpg" alt="photo" />
+				<!-- <img
+					srcset="assets/images/main_photo-min.jpg 300w, assets/images/main_photo.jpg 400w"
+					sizes="(max-width:576px) 280px, (min-width: 577px) 400px"
+					src="assets/images/main_photo.jpg"
+					alt="photo" /> -->
+
+				<picture>
+					<source media="(max-width:576px)" srcset="assets/images/main_photo-min.jpg" />
+					<source media="(min-width:577px)" srcset="assets/images/main_photo.jpg" />
+					<img src="assets/images/main_photo.jpg" alt="" />
+				</picture>
 			</div>
 			<div class="about__description">
 				<h2 class="title title_fz16 about__title">Про меня</h2>
